@@ -3,7 +3,7 @@
 
 TOP = ..\..
 
-!INCLUDE $(TOP)\build\win32\make.msc
+!INCLUDE ..\build\win32\make.msc
 
 # Possibly override GLib version in build\win32\object.defs
 GLIB_VER = @GLIB_MAJOR_VERSION@.@GLIB_MINOR_VERSION@
