@@ -3,24 +3,28 @@
 
 TOP = ..\..
 
-!INCLUDE $(TOP)\build\win32\make.msc
+!INCLUDE ..\build\win32\make.msc
 
 ################################################################
 
 INCLUDES = -I .. -I ..\glib -I ..\gmodule
 DEFINES = -DHAVE_CONFIG_H
 
+NONAUTOMATIC_TESTS = \
+	testglib.exe	\
+	testgdate.exe	\
+	testgdateparser.exe \
+	patterntest.exe \
+	unicode-normalize.exe \
+	unicode-collate.exe
+
 # mainloop-test removed for now until it is fixed
 
 TESTS = \
-	testglib.exe \
-	testgdate.exe \
-	testgdateparser.exe \
 	array-test.exe	\
 	date-test.exe	\
 	dirname-test.exe\
 	gio-test.exe	\
-	iochannel-test.exe	\
 	hash-test.exe	\
 	list-test.exe	\
 	markup-test.exe	\
@@ -35,15 +39,19 @@ TESTS = \
 # strfunc-test doesn't compile with MSVC
 #	strfunc-test.exe\
 	string-test.exe	\
+	strtod-test.exe \
 	thread-test.exe	\
 	threadpool-test.exe\
 	tree-test.exe	\
 	type-test.exe	\
-	unicode-encoding.exe \
+	unicode-caseconv.exe \
+	unicode-encoding.exe
+
+DLLS = \
 	libmoduletestplugin_a.dll \
 	libmoduletestplugin_b.dll
 
-all :	$(TESTS)
+all :	$(TESTS) $(NONAUTOMATIC_TESTS) $(DLLS)
 
 .c.exe :
 	$(CC) $(CFLAGS) -c $<
